# pyhopper

./: .gitmodules  CURVES_AND_SURFACES.md  DECLARATIVE_DEFINITION.md  NEW_COMPONENT.md  _tmp_ruled_arc.glb  _tmp_ruled_circle.glb  log.txt  mkdocs.yml  plan.md  pyproject.toml  run.txt
docs/: getting-started.md  index.md
docs/concepts/: atoms.md  components.md  data-tree.md  index.md
docs/examples/: tower.md
pyhopper/: __init__.py  admin_utils.py
pyhopper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyhopper/.claude/: settings.local.json
pyhopper/Components/Curve/Analysis/: CurveMiddle.py  __init__.py
pyhopper/Components/Curve/Division/: DivideCurve.py
pyhopper/Components/Curve/Primitive/: Circle.py  Circle3Pt.py  CircleCNR.py  (+6 more)
pyhopper/Components/Maths/: Series.py
pyhopper/Components/Params/: __init__.py
pyhopper/Components/Sets/: __init__.py
pyhopper/Components/Surface/: __init__.py
pyhopper/Components/Transform/: __init__.py
pyhopper/Core/: Atoms.py  Branch.py  Component.py  DataTree.py  Path.py  __init__.py
pyhopper/Examples/: first_test.py  tower.glb
pyhopper/Utils/: Transforms.py
pyhopper/Utils/Exporters/: __init__.py  glb.py
pyhopper/Utils/Unifiers/: unifiers.md  unitypes.py
site/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
site/concepts/: index.html
site/concepts/atoms/: index.html
site/concepts/components/: index.html
site/concepts/data-tree/: index.html
site/examples/tower/: index.html
site/getting-started/: index.html
site/reference/SUMMARY/: index.html
site/search/: search_index.json
(+90 files in other folders)
