[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhopper"
version = "0.1.0"
description = "Declarative parametric 3D modeling in Python."
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyhopper*"]
